[gd_scene load_steps=20 format=3 uid="uid://cjoimti7prcbw"]

[ext_resource type="Script" path="res://codes/enemy.gd" id="1_oobcf"]
[ext_resource type="Texture2D" uid="uid://c7i0ntgtc6v0j" path="res://assets/sprites/monster/Monsters_Creatures_Fantasy/Skeleton/Walk.png" id="2_pp2ma"]
[ext_resource type="Texture2D" uid="uid://c15uefufodehj" path="res://assets/sprites/monster/Monsters_Creatures_Fantasy/Skeleton/Idle.png" id="3_06pxx"]
[ext_resource type="Texture2D" uid="uid://cl2atjbg5papp" path="res://assets/sprites/monster/Monsters_Creatures_Fantasy/Skeleton/Death.png" id="3_ica74"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0wqm2"]
radius = 32.0
height = 144.0

[sub_resource type="AtlasTexture" id="AtlasTexture_o5bui"]
atlas = ExtResource("2_pp2ma")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_255t2"]
atlas = ExtResource("2_pp2ma")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wg81n"]
atlas = ExtResource("2_pp2ma")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctidu"]
atlas = ExtResource("2_pp2ma")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ayia"]
atlas = ExtResource("3_ica74")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_468l5"]
atlas = ExtResource("3_ica74")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8udwj"]
atlas = ExtResource("3_ica74")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_whxm8"]
atlas = ExtResource("3_ica74")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_isl4g"]
atlas = ExtResource("3_06pxx")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_swqra"]
atlas = ExtResource("3_06pxx")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4a4qp"]
atlas = ExtResource("3_06pxx")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xue1k"]
atlas = ExtResource("3_06pxx")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_nttny"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5bui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_255t2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wg81n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctidu")
}],
"loop": true,
"name": &"aggressive",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ayia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_468l5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8udwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whxm8")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_isl4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swqra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4a4qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xue1k")
}],
"loop": true,
"name": &"passive",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3hr4j"]
radius = 536.0

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_oobcf")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(8, -40)
shape = SubResource("CapsuleShape2D_0wqm2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-8, -48)
scale = Vector2(2.66666, 2.66667)
sprite_frames = SubResource("SpriteFrames_nttny")
animation = &"passive"
frame_progress = 0.828745

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_3hr4j")

[node name="enemy_health" type="ProgressBar" parent="."]
modulate = Color(1, 0.243137, 0, 1)
offset_left = -32.0
offset_top = -128.0
offset_right = 235.0
offset_bottom = -101.0
scale = Vector2(0.3, 0.3)
show_percentage = false

[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
